<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasuresFragment"
    android:background="@color/platinum">

    <Button
        android:id="@+id/changeLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/change_language_button_text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/centerHorizontalLine" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerVerticalLine">


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:background="@drawable/malefemalenotfocus"
        android:layout_above="@id/heightLayout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/male">
        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textmale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/male"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/textmale"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/male_text"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:background="@drawable/malefemalenotfocus"
        android:layout_above="@id/heightLayout"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/female">
        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@+id/textfemale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/textfemale"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/female_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/heightLayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerHorizontalLine"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cardbackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/height_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/currentHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="170"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentHeight"
            android:text="Cm"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBarHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="#FF4C4C" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightLayout"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/centerVerticalLine"
        android:id="@+id/weight"
        android:background="@drawable/cardbackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight_text"
            android:id="@+id/textweight"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/currentWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="65"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentWeight"
            android:text="Kg"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusmin"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_remove_24"
                android:id="@+id/decrementWeight"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusmin"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_add_24"
                android:id="@+id/incrementWeight"/>

        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightLayout"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/centerVerticalLine"
        android:id="@+id/age"
        android:background="@drawable/cardbackground">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/age_text"
            android:id="@+id/textage"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/currentAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="22"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusmin"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_remove_24"
                android:id="@+id/decrementAge"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusmin"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_add_24"
                android:id="@+id/incrementAge"/>

        </RelativeLayout>

    </RelativeLayout>


    <android.widget.Button
        android:id="@+id/calculateBMI"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttonbackground"
        android:text="@string/calculate_bmi_button_text"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/resultBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calculateBMI"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="" />
</RelativeLayout>
